--- a/.htaccess
+++ b/.htaccess
@@ -14,7 +14,7 @@ Options -Indexes
     Header always set Referrer-Policy "strict-origin-when-cross-origin"
     
     # CSP pro HTML stránky
-    Header always set Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' cdn.jsdelivr.net cdn.tailwindcss.com; style-src 'self' 'unsafe-inline' cdn.jsdelivr.net cdn.tailwindcss.com; img-src 'self' data: blob:; connect-src 'self'; font-src 'self' cdn.jsdelivr.net; frame-ancestors 'none'; base-uri 'self'; form-action 'self';"
+    Header always set Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' cdn.jsdelivr.net cdn.tailwindcss.com; style-src 'self' 'unsafe-inline' cdn.jsdelivr.net cdn.tailwindcss.com; img-src 'self' data: blob:; connect-src 'self'; font-src 'self' data: cdn.jsdelivr.net; frame-ancestors 'none'; base-uri 'self'; form-action 'self';"
     
     # Remove server signature
     Header always unset X-Powered-By
